--- a/index.html
+++ b/index.html
@@ -31,22 +31,24 @@
 <div class="container"> 
 	<div style="text-align: center;">
 		<div class="left">
-			<img src="hyliu.jpg" style="max-width:90%;height:auto;" />
+			<img src="hyliu.png" style="max-width:90%;height:auto;" />
 		</div>
 
 		<div class="right">
 		<h1>Hongyuan Liu</h1>
-		<p><strong>Email:</strong> hongyuanliu at hkust-gz edu cn</p>
-                <p><strong>Office:</strong> E1-513 </p>
+		<p><strong>Email:</strong> hliu96 at stevens edu</p>
+                <p><strong>Office:</strong> Gateway Center N416 </p>
 		<a href="https://dblp.org/pid/18/9462-2"><i class="ai ai-dblp"></i></a>
 		<a href="https://orcid.org/0000-0002-6961-6394"><i class="ai ai-orcid"></i></a>
 		<a href="https://scholar.google.com/citations?user=o-tpTowAAAAJ"><i class="ai ai-google-scholar"></i></a>
 		<div style="text-align: left;">
-					<p>I am an assistant professor at <a href="https://hkust-gz.edu.cn/academics/four-hubs/function-hub/microelectronics">The Hong Kong University of Science and Technology (Guangzhou)</a>. I work in the areas of computer architecture and parallel computing. </p>
+					<p>I am an assistant professor at <a href="https://www.stevens.edu/school-engineering-science/departments/computer-science">Stevens Institute of Technology</a>. I work in the areas of computer architecture and parallel computing. </p>
 			<p>I obtained my Ph.D. degree at <a href="https://www.wm.edu">William &amp; Mary</a> advised by <a href="https://adwaitjog.github.io/">Adwait Jog</a>. 
 			I received my M.Sc. degree at the <a href="https://www.cs.hku.hk">University of Hong Kong</a> working with <a href="https://i.cs.hku.hk/~clwang">Cho-Li Wang</a>, and my B.Eng. degree from <a href="https://en.wikipedia.org/wiki/Shandong_University">Shandong University</a>. 
 			</p>
-		
+			
+			<br />
+			<p><em><font color="blue">I am looking for self-motivated students interested in research in high-performance computing, systems, and compilers. Both PhD positions and research assistantships are available. If you are interested, please email me your CV and briefly explain your motivation and research interests.</font></em></p>
 		</div>
 		</div>
 	</div>
@@ -55,7 +57,18 @@
 	<div style="float: left">
 	<h2>Research</h2>
 	<ul>
-		 <li><a href="#">ngAP: Non-blocking Large-scale Automata Processing on GPUs</a>. <u>Tianao Ge</u>, Tong Zhang, <b>Hongyuan Liu</b>. ASPLOS 2024</li>
+		<li><a href="https://dl.acm.org/doi/pdf/10.1145/3711707">VESTA: A Secure and Efficient FHE-based Three-Party Vectorized Evaluation System for Tree Aggregation Models</a>. <u><a href="https://scholar.google.com/citations?user=x_2aghkAAAAJ&hl=en">Haosong Zhao</a></u>, Junhao Huang, <a href="https://maxkev1n.github.io/"><u>Zihang Chen</u></a>, <u><a href="https://www.linkedin.com/in/kunxiongzhu/">Kunxiong Zhu</a></u>, Donglong Chen, Zhuoran Ji, <b>Hongyuan Liu</b>. SIGMETRICS 2025
+
+		<li><a href="https://dl.acm.org/doi/pdf/10.1145/3711925">gHyPart: GPU-friendly End-to-End Hypergraph Partitioner</a>. <u><a href="https://zlwu92.github.io/">Zhenlin Wu</a></u>, <u><a href="https://scholar.google.com/citations?user=x_2aghkAAAAJ&hl=en">Haosong Zhao</a></u>, <b>Hongyuan Liu</b>, Wujie Wen, Jiajia Li. TACO 2025
+
+		<li><a href="https://ieeexplore.ieee.org/document/10763832">Efficient Point Cloud Analytics on Edge Devices</a>. <u><a href="https://www.linkedin.com/in/kunxiongzhu/">Kunxiong Zhu</a></u>, <u><a href="https://zlwu92.github.io/">Zhenlin Wu</a></u>, <b>Hongyuan Liu</b>. ICPADS 2024</li>
+		 
+		 <li><a href="https://dl.acm.org/doi/10.1145/3617232.3624848">ngAP: Non-blocking Large-scale Automata Processing on GPUs</a>. <u><a href="https://getianao.github.io/">Tianao Ge</a></u>, Tong Zhang, <b>Hongyuan Liu</b>. ASPLOS 2024 <font color="blue"><b>[Best Paper Award]</b></font>
+		<ul>
+				<li><a href="https://github.com/getianao/ngAP">[Artifact]</a></li>
+			</ul>
+		</li>
+
         <li><a href="https://doi.org/10.1145/3579453">Asynchronous Automata Processing on GPUs</a>. <b>Hongyuan Liu</b>, Sreepathi Pai, Adwait Jog. SIGMETRICS 2023</li>
 
 		
@@ -75,28 +88,19 @@
 		
 		<li><a href="https://doi.org/10.1109/icpads.2016.0119">Lightweight Dependency Checking for Parallelizing Loops with Non-deterministic Dependency on GPU</a>. <b>Hongyuan Liu</b>, King Tin Lam, Huanxin Lin, Cho-Li Wang, Junchao Ma. ICPADS 2016</li>
 	</ul>
-    <small>* Names with underlines indicate students whom I advised. </small>
+    * Names with underlines indicate students I advised. 
 	</div>
 
         <br style="clear:both" />
 	<div style="float: left; Display: block;">
-	<h2>Team</h2>
-	<ul>
-		<li><a href="https://getianao.github.io/">Tianao Ge (Fall 2022)</a></li>
-		<li><a href="https://zlwu92.github.io/">Zhenlin Wu (Fall 2022)</a></li>
-        <li>Zihang Chen (Fall 2023)</li>
-        <li>Bi Zeng (Fall 2023)</li>
-        <li>Haosong Zhao (Fall 2023)</li>
-	</ul>
-	</div>
 
 	<br style="clear:both" />
 	<div style="float: left; Display: block;">
 	<h2>Teaching</h2>
 	<ul>
-        <li>UFUG2601: C++ Programming (Fall 2023, co-teach with Prof. Yangdi Lyu)</li>
+        <li>UFUG2601: C++ Programming (Fall 2024, Fall 2023, co-teach with Prof. Yangdi Lyu)</li>
         <li>MICS6000J: GPU Architectures and Programming (Fall 2023)</li>
-		<li>MICS6000R: Advanced Compilers (Spring 2023)</li>
+		<li>MICS6000R: Advanced Compilers (Spring 2023, Fall 2024)</li>
 		<li>MICS6000J: GPU Architectures and Programming (Fall 2022)</li>
 	</ul>
 	</div>
