--- a/index.html
+++ b/index.html
@@ -99,9 +99,8 @@
 	<h2>Teaching</h2>
 	<ul>
         <li>UFUG2601: C++ Programming (Fall 2024, Fall 2023, co-teach with Prof. Yangdi Lyu)</li>
-        <li>MICS6000J: GPU Architectures and Programming (Fall 2023)</li>
 		<li>MICS6000R: Advanced Compilers (Spring 2023, Fall 2024)</li>
-		<li>MICS6000J: GPU Architectures and Programming (Fall 2022)</li>
+		<li>MICS6000J: GPU Architectures and Programming (Fall 2023, Fall 2022)</li>
 	</ul>
 	</div>
 
