--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
 	<div style="float: left">
 	<h2>Research</h2>
 	<ul>
+		 <li><a href="#">Interleaved Bitstream Execution for Multi-Pattern Regex Matching on GPUs</a>. <u><a href="https://getianao.github.io/">Tianao Ge</a></u>, Xiaowen Chu, <b>Hongyuan Liu</b>. MICRO 2025
+		
+		<li><a href="#">Towards Scalable and Non-blocking Automata Processing on GPUs with ngAP</a>. <u><a href="https://getianao.github.io/">Tianao Ge</a></u>, Tong Zhang, <b>Hongyuan Liu</b>. TOCS 2025
+
 		<li><a href="https://dl.acm.org/doi/pdf/10.1145/3711707">VESTA: A Secure and Efficient FHE-based Three-Party Vectorized Evaluation System for Tree Aggregation Models</a>. <u><a href="https://scholar.google.com/citations?user=x_2aghkAAAAJ&hl=en">Haosong Zhao</a></u>, Junhao Huang, <a href="https://maxkev1n.github.io/"><u>Zihang Chen</u></a>, <u><a href="https://www.linkedin.com/in/kunxiongzhu/">Kunxiong Zhu</a></u>, Donglong Chen, Zhuoran Ji, <b>Hongyuan Liu</b>. SIGMETRICS 2025
 
 		<li><a href="https://dl.acm.org/doi/pdf/10.1145/3711925">gHyPart: GPU-friendly End-to-End Hypergraph Partitioner</a>. <u><a href="https://zlwu92.github.io/">Zhenlin Wu</a></u>, <u><a href="https://scholar.google.com/citations?user=x_2aghkAAAAJ&hl=en">Haosong Zhao</a></u>, <b>Hongyuan Liu</b>, Wujie Wen, Jiajia Li. TACO 2025
