--- a/index.html
+++ b/index.html
@@ -53,66 +53,96 @@
 		</div>
 	</div>
 
-	
-	<div style="float: left">
-	<h2>Research</h2>
-	<ul>
-		 <li><a href="#">Interleaved Bitstream Execution for Multi-Pattern Regex Matching on GPUs</a>. <u><a href="https://getianao.github.io/">Tianao Ge</a></u>, Xiaowen Chu, <b>Hongyuan Liu</b>. MICRO 2025
-		
-		<li><a href="#">Towards Scalable and Non-blocking Automata Processing on GPUs with ngAP</a>. <u><a href="https://getianao.github.io/">Tianao Ge</a></u>, Tong Zhang, <b>Hongyuan Liu</b>. TOCS 2025
 
-		<li><a href="https://dl.acm.org/doi/pdf/10.1145/3711707">VESTA: A Secure and Efficient FHE-based Three-Party Vectorized Evaluation System for Tree Aggregation Models</a>. <u><a href="https://scholar.google.com/citations?user=x_2aghkAAAAJ&hl=en">Haosong Zhao</a></u>, Junhao Huang, <a href="https://maxkev1n.github.io/"><u>Zihang Chen</u></a>, <u><a href="https://www.linkedin.com/in/kunxiongzhu/">Kunxiong Zhu</a></u>, Donglong Chen, Zhuoran Ji, <b>Hongyuan Liu</b>. SIGMETRICS 2025
+    <div style="clear:both"></div>
 
-		<li><a href="https://dl.acm.org/doi/pdf/10.1145/3711925">gHyPart: GPU-friendly End-to-End Hypergraph Partitioner</a>. <u><a href="https://zlwu92.github.io/">Zhenlin Wu</a></u>, <u><a href="https://scholar.google.com/citations?user=x_2aghkAAAAJ&hl=en">Haosong Zhao</a></u>, <b>Hongyuan Liu</b>, Wujie Wen, Jiajia Li. TACO 2025
+    <div>
+        <h2>Research</h2>
+        <ul>
+            <li>
+                
+					Interleaved Bitstream Execution for Multi-Pattern Regex Matching on GPUs. 
+				
+                <u><a href="https://getianao.github.io/">Tianao Ge</a></u>, Xiaowen Chu, <b>Hongyuan Liu</b>. MICRO 2025
+            </li>
 
-		<li><a href="https://ieeexplore.ieee.org/document/10763832">Efficient Point Cloud Analytics on Edge Devices</a>. <u><a href="https://www.linkedin.com/in/kunxiongzhu/">Kunxiong Zhu</a></u>, <u><a href="https://zlwu92.github.io/">Zhenlin Wu</a></u>, <b>Hongyuan Liu</b>. ICPADS 2024</li>
-		 
-		 <li><a href="https://dl.acm.org/doi/10.1145/3617232.3624848">ngAP: Non-blocking Large-scale Automata Processing on GPUs</a>. <u><a href="https://getianao.github.io/">Tianao Ge</a></u>, Tong Zhang, <b>Hongyuan Liu</b>. ASPLOS 2024 <font color="blue"><b>[Best Paper Award]</b></font>
-		<ul>
-				<li><a href="https://github.com/getianao/ngAP">[Artifact]</a></li>
-			</ul>
-		</li>
+            <li>
+                <a href="https://dl.acm.org/doi/pdf/10.1145/3711707">VESTA: A Secure and Efficient FHE-based Three-Party Vectorized Evaluation System for Tree Aggregation Models</a>.
+                <u><a href="https://scholar.google.com/citations?user=x_2aghkAAAAJ&hl=en">Haosong Zhao</a></u>, Junhao Huang, 
+                <u><a href="https://maxkev1n.github.io/">Zihang Chen</a></u>, 
+                <u><a href="https://www.linkedin.com/in/kunxiongzhu/">Kunxiong Zhu</a></u>, Donglong Chen, Zhuoran Ji, <b>Hongyuan Liu</b>. SIGMETRICS 2025
+            </li>
+            <li>
+                <a href="https://dl.acm.org/doi/pdf/10.1145/3711925">gHyPart: GPU-friendly End-to-End Hypergraph Partitioner</a>. 
+                <u><a href="https://zlwu92.github.io/">Zhenlin Wu</a></u>, 
+                <u><a href="https://scholar.google.com/citations?user=x_2aghkAAAAJ&hl=en">Haosong Zhao</a></u>, 
+                <b>Hongyuan Liu</b>, Wujie Wen, Jiajia Li. TACO 2025
+            </li>
+            <li>
+                <a href="https://ieeexplore.ieee.org/document/10763832">Efficient Point Cloud Analytics on Edge Devices</a>.
+                <u><a href="https://www.linkedin.com/in/kunxiongzhu/">Kunxiong Zhu</a></u>,
+                <u><a href="https://zlwu92.github.io/">Zhenlin Wu</a></u>,
+                <b>Hongyuan Liu</b>. ICPADS 2024
+            </li>
+            <li>
+                <a href="https://dl.acm.org/doi/10.1145/3617232.3624848">ngAP: Non-blocking Large-scale Automata Processing on GPUs</a>.
+                <u><a href="https://getianao.github.io/">Tianao Ge</a></u>, Tong Zhang, <b>Hongyuan Liu</b>. ASPLOS 2024 
+                <span style="color:blue"><b>[Best Paper Award]</b></span>
+                <ul>
+                    <li><a href="https://github.com/getianao/ngAP">[Artifact]</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="https://doi.org/10.1145/3579453">Asynchronous Automata Processing on GPUs</a>.
+                <b>Hongyuan Liu</b>, Sreepathi Pai, Adwait Jog. SIGMETRICS 2023
+            </li>
+            <li>
+                <a href="https://doi.org/10.1109/Cluster48925.2021.00051">Accelerating DNN Architecture Search at Scale Using Selective Weight Transfer</a>.
+                <b>Hongyuan Liu</b>, Bogdan Nicolae, Sheng Di, Franck Cappello, Adwait Jog. CLUSTER 2021
+            </li>
+            <li>
+                <a href="https://dl.acm.org/doi/10.1145/3373376.3378471">Why GPUs are Slow at Executing NFAs and How to Make them Faster</a>.
+                <b>Hongyuan Liu</b>, Sreepathi Pai, Adwait Jog. ASPLOS 2020
+                <ul>
+                    <li><a href="https://www.youtube.com/watch?v=ShcjkBDs8TI">[Full Talk]</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="https://doi.org/10.1109/PACT.2019.00028">Analyzing and Leveraging Remote-core Bandwidth for Enhanced Performance in GPUs</a>.
+                Mohamed Assem Ibrahim, <b>Hongyuan Liu</b>, Onur Kayiran, Adwait Jog. PACT 2019
+            </li>
+            <li>
+                <a href="https://dl.acm.org/doi/10.1109/MICRO.2018.00078">Architectural Support for Efficient Large-Scale Automata Processing</a>.
+                <b>Hongyuan Liu</b>, Mohamed Assem Ibrahim, Onur Kayiran, Sreepathi Pai, Adwait Jog. MICRO 2018
+                <ul>
+                    <li>
+                        <a href="https://www.youtube.com/watch?v=-kXyyXxe82Y&feature=youtu.be">[Lightning Talk]</a>
+                        <a href="slides/ap-micro2018.pptx">[Slides]</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="https://doi.org/10.1145/3242089">On-GPU Thread-Data Remapping for Branch Divergence Reduction</a>.
+                Huanxin Lin, Cho-Li Wang, <b>Hongyuan Liu</b>. TACO 2018
+            </li>
+            <li>
+                <a href="https://doi.org/10.1109/icpads.2016.0119">Lightweight Dependency Checking for Parallelizing Loops with Non-deterministic Dependency on GPU</a>.
+                <b>Hongyuan Liu</b>, King Tin Lam, Huanxin Lin, Cho-Li Wang, Junchao Ma. ICPADS 2016
+            </li>
+        </ul>
+        <p style="font-size:small">* Names with underlines indicate students I advised.</p>
+    </div>
 
-        <li><a href="https://doi.org/10.1145/3579453">Asynchronous Automata Processing on GPUs</a>. <b>Hongyuan Liu</b>, Sreepathi Pai, Adwait Jog. SIGMETRICS 2023</li>
-
-		
-		<li><a href="https://doi.org/10.1109/Cluster48925.2021.00051">Accelerating DNN Architecture Search at Scale Using Selective Weight Transfer</a>. <b>Hongyuan Liu</b>, Bogdan Nicolae, Sheng Di, Franck Cappello, Adwait Jog. CLUSTER 2021</li>
-
-		<li><a href="https://dl.acm.org/doi/10.1145/3373376.3378471">Why GPUs are Slow at Executing NFAs and How to Make them Faster</a>. <b>Hongyuan Liu</b>, Sreepathi Pai, Adwait Jog. ASPLOS 2020
-			<ul>
-				<li><a href="https://www.youtube.com/watch?v=ShcjkBDs8TI">[Full Talk]</a></li>
-			</ul>
-		</li>
-
-		<li><a href="https://doi.org/10.1109/PACT.2019.00028">Analyzing and Leveraging Remote-core Bandwidth for Enhanced Performance in GPUs</a>. Mohamed Assem Ibrahim, <b>Hongyuan Liu</b>, Onur Kayiran, Adwait Jog. PACT 2019</li>
-		
-		<li><a href="https://dl.acm.org/doi/10.1109/MICRO.2018.00078">Architectural Support for Efficient Large-Scale Automata Processing</a>. <b>Hongyuan Liu</b>, Mohamed Assem Ibrahim, Onur Kayiran, Sreepathi Pai, Adwait Jog. MICRO 2018<ul><li><a href="https://www.youtube.com/watch?v=-kXyyXxe82Y&feature=youtu.be">[Lightning Talk]</a><a href="slides/ap-micro2018.pptx">[Slides]</a></li></ul></li>
-		
-		<li><a href="https://doi.org/10.1145/3242089">On-GPU Thread-Data Remapping for Branch Divergence Reduction</a>. Huanxin Lin, Cho-Li Wang, <b>Hongyuan Liu</b>. TACO 2018</li>
-		
-		<li><a href="https://doi.org/10.1109/icpads.2016.0119">Lightweight Dependency Checking for Parallelizing Loops with Non-deterministic Dependency on GPU</a>. <b>Hongyuan Liu</b>, King Tin Lam, Huanxin Lin, Cho-Li Wang, Junchao Ma. ICPADS 2016</li>
-	</ul>
-    * Names with underlines indicate students I advised. 
-	</div>
-
-        <br style="clear:both" />
-	<div style="float: left; Display: block;">
-
-	<br style="clear:both" />
-	<div style="float: left; Display: block;">
-	<h2>Teaching</h2>
-	<ul>
-        <li>UFUG2601: C++ Programming (Fall 2024, Fall 2023, co-teach with Prof. Yangdi Lyu)</li>
-		<li>MICS6000R: Advanced Compilers (Spring 2023, Fall 2024)</li>
-		<li>MICS6000J: GPU Architectures and Programming (Fall 2023, Fall 2022)</li>
-	</ul>
-	</div>
-
+    <div>
+        <h2>Teaching</h2>
+        <ul>
+            <li>UFUG2601: C++ Programming (Fall 2024, Fall 2023, co-teach with Prof. Yangdi Lyu)</li>
+            <li>MICS6000R: Advanced Compilers (Spring 2023, Fall 2024)</li>
+            <li>MICS6000J: GPU Architectures and Programming (Fall 2023, Fall 2022)</li>
+        </ul>
+    </div>
 </div>
 
-
-	
 </body>
 </html>
-
 
